tests/toy/neg/000797_mutation.toylang
program a = { a = sleep 0; } .
